--- a/localization/zhs/AigisMod-Power-Strings.json
+++ b/localization/zhs/AigisMod-Power-Strings.json
@@ -159,7 +159,7 @@
                 "NAME": "八咫之翼",
                 "DESCRIPTIONS": ["每回合一次，打出 #y帝国 牌时，消耗 #b", " 张状态牌。", "你已经消耗过牌了。"]
         },
-        "aigisMod:AerialSupremacy": {
+        "aigisMod:AerialSupremacy000": {
                 "NAME": "霸空的机关少女",
                 "DESCRIPTIONS": ["当生成 #y空中标记 时，将其升级。"]
         },
@@ -183,7 +183,7 @@
                 "NAME": "活力炼金炉",
                 "DESCRIPTIONS": ["当你使用 #y药水 时，回复所有 [E] 并获得 #b", " 枚 #y金币 。"]
         },
-        "aigisMod:AcidBomb": {
+        "aigisMod:AcidBomb000": {
                 "NAME": "强酸炸弹",
                 "DESCRIPTIONS": ["当你使用 #y药水 时, 对所有敌人造成 #b", " 点 #y伤害 。战斗结束时，获得1瓶药水。"]
         },
@@ -374,7 +374,7 @@
 
         "aigisMod:DivineStaffDagda": {
                 "NAME": "达格达的神杖",
-                "DESCRIPTIONS": ["回复或获得临时生命时，获得 #b", " 点 #y力量 和 #b", " 点 #y格挡 。"]
+                "DESCRIPTIONS": ["回复生命时，获得 #b", " 点 #y力量 和 #b", " 点 #y格挡 。"]
         },
 
         "aigisMod:ImperialSmith": {
@@ -414,7 +414,7 @@
         },
         "aigisMod:KibaninFrenzy": {
                 "NAME": "鬼刃大车轮",
-                "DESCRIPTIONS": ["本回合每当你打出一张 #y角色 牌， 将 #b", " 张 #y手里剑 牌加入手牌。"]
+                "DESCRIPTIONS": ["下 #b", " 回合，每当你打出一张 #y角色 牌将 #b1 张 #y手里剑 牌加入手牌。"]
         },
         "aigisMod:SecretPill": {
                 "NAME": "秘传的丸药",
@@ -436,6 +436,113 @@
                 "NAME": "千鬼夜行",
                 "DESCRIPTIONS": ["本回合每次你打出 #y东国 或 #y手里剑 牌时，所有敌人失去 #b", " 点 #y生命 。"]
         },
+
+
+
+
+
+        "aigisMod:WaterPressure": {
+                "NAME": "水压",
+                "DESCRIPTIONS": ["回合结束时失去 #b", " 点 #y生命， 或者所有 #y生命，如果拥有 #b7 层以上，boss除外。"]
+        },
+        "aigisMod:DrownedEnemy": {
+                "NAME": "淹没",
+                "DESCRIPTIONS": ["回合开始时，失去 #b", " 点 #y生命 。"]
+        },
+        "aigisMod:HellbeastTraining": {
+                "NAME": "魔兽调教",
+                "DESCRIPTIONS": ["#y魔兽刻耳柏洛斯耗能变为 #b0 并且增加 #b", " 点伤害。"]
+        },
+        "aigisMod:BoostBeast": {
+                "NAME": "野兽增速",
+                "DESCRIPTIONS": ["当你打出 #y魔兽刻耳柏洛斯 时，获得 #b", " 点 #y力量 。"]
+        },
+        "aigisMod:FullPowerYell": {
+                "NAME": "全力应援!",
+                "DESCRIPTIONS": ["当你打出 #y魔兽刻耳柏洛斯 时，获得 #b", " 点 #y格挡 。"]
+        },
+        "aigisMod:GreatWhirlpool": {
+                "NAME": "大涡的波动",
+                "DESCRIPTIONS": ["回合结束时，你每有一层 #y水压 ，获得 #b", " 点 #y格挡 。"]
+        },
+        "aigisMod:SpinningSlash": {
+                "NAME": "回旋斩",
+                "DESCRIPTIONS": ["当你 #y消耗 牌时，这个敌人受到 #b", " 点 #y伤害 。"]
+        },
+        "aigisMod:FierceSeas": {
+                "NAME": "波涛汹涌之海的象征",
+                "DESCRIPTIONS": ["当你获得 #y水压 时， 获得 #b", " 点 #y力量 。"]
+        },
+        "aigisMod:DragonPalaceDance": {
+                "NAME": "龙宫之舞",
+                "DESCRIPTIONS": ["你不会受到来自 #y水压 的伤害。 当你获得 #y水压 时, 对所有敌人施加 #b", " 层 #y虚弱 。"]
+        },
+        "aigisMod:AerialSupremacy": {
+                "NAME": "霸空的机关少女",
+                "DESCRIPTIONS": ["本回合阻止下1次受到的来自你自己的伤害。 ", "本回合阻止下 #b", " 次受到的来自你自己的 #y伤害 。"]
+        },
+        "aigisMod:StormArrow": {
+                "NAME": "风暴之矢",
+                "DESCRIPTIONS": ["当你打出 #y空中标记 时，对所有敌人造成 #b", " 点 #y伤害 。"]
+        },
+        "aigisMod:Aerobatics": {
+                "NAME": "曲技飞行",
+                "DESCRIPTIONS": ["阻止下1次受到的 #b", " 或以下的伤害。"]
+        },
+        "aigisMod:WarshipArtillery": {
+                "NAME": "大舰巨炮",
+                "DESCRIPTIONS": ["当你打出 #y水兵 或 #y深海 牌时，对所有敌人造成 #b", " 点 #y伤害 。"]
+        },
+        "aigisMod:TailwindPrayer": {
+                "NAME": "顺风的祈祷",
+                "DESCRIPTIONS": ["当你打出 #y空中标记 时，获得 #b", " 点 #y临时生命 。"]
+        },
+        "aigisMod:HeavenlyAirspace": {
+                "NAME": "天惠空域",
+                "DESCRIPTIONS": ["当你打出 #y空中标记 时，对随机敌人施加 #b", " 层 #y易伤，并且移除你的所有 #y虚弱 和 #y易伤 。"]
+        },
+        "aigisMod:Eureka": {
+                "NAME": "尤里卡!",
+                "DESCRIPTIONS": ["在回合开始时，随机将 #b", " #y魔兽刻耳柏洛斯 、 #y水压 或 #y空中标记 加入手牌。"]
+        },
+        "aigisMod:DevouringGreatwolf": {
+                "NAME": "噬天的大狼",
+                "DESCRIPTIONS": ["#y魔兽刻耳柏洛斯 额外造成 #b", " 点伤害。 回合开始时，此伤害提升 #b", " 点。"]
+        },
+        "aigisMod:SuppressiveRounds": {
+                "NAME": "镇压用散弹",
+                "DESCRIPTIONS": ["在回合开始时，获得 #b", " 层 #y活力 。"]
+        },
+        "aigisMod:ChaosDominance": {
+                "NAME": "混沌支配",
+                "DESCRIPTIONS": ["在回合开始时，将 #b", " 张 #y混沌元素 加入手牌。"]
+        },
+        "aigisMod:MiracleDiet": {
+                "NAME": "奇迹节食",
+                "DESCRIPTIONS": ["在回合结束时，失去 #b", " 点 #y生命 。"]
+        },
+        "aigisMod:AcidBomb": {
+                "NAME": "强酸炸弹",
+                "DESCRIPTIONS": ["当你使用1瓶 #y药水时， 对 #y所有人 造成 #b", " 点 #y伤害 。"]
+        },
+        "aigisMod:ElixirSpray": {
+                "NAME": "长生不老药散布",
+                "DESCRIPTIONS": ["胜利时，获得随机 #y药水 。 每场战斗一次。"]
+        },
+        "aigisMod:PreciousMetals": {
+                "NAME": "贵金属炼成",
+                "DESCRIPTIONS": ["在回合开始时， 收到 #b", " 点伤害。胜利时，获得 #b", " 枚 #y金币 。"]
+        },
+        "aigisMod:InmortalFeast": {
+                "NAME": "不死者的飨宴",
+                "DESCRIPTIONS": ["每当你消耗 #y不死族 或 #y诅咒 时，获得 #b", " 点 #y力量 。"]
+        },
+        "aigisMod:CursedShadows": {
+                "NAME": "咒影的大结界",
+                "DESCRIPTIONS": ["额外受到 #b", " 点来自 #y攻击牌 的伤害。 在回合结束时，获得 #b", " 点 #y格挡 。"]
+        },
+
+
 
         "aigisMod:Strength ForTheTurnPower": {
                 "NAME": "回合内力量",
