--- a/localization/zhs/AigisMod-Character-Strings.json
+++ b/localization/zhs/AigisMod-Character-Strings.json
@@ -42,5 +42,17 @@
       "你将用特殊的技术攻击心脏。",
       "在一条昏暗的街上，你遇见几个戴着兜帽的人在进行某种黑暗的仪式。当你靠近时，他们全都同时转身面对你，让你觉得十分诡异。 其中个子最高的一个微微一笑，露出了长长的尖牙，向你伸出了一只苍白而瘦长的手： NL ~\"加入~ ~我们~ ~骑士。~ ~一起~ ~感受~ ~高塔~ ~的~ ~温暖~ ~吧。\"~"
     ]
+  },
+
+  "aigisMod:TheMiracleManCharacter": {
+    "NAMES": [
+      "奇迹之男",
+      "奇迹之男"
+    ],
+    "TEXT": [
+      "丹，一名总是在追寻力量的格斗家。 为了寻找比自己更强的敌人，这位武僧将会登上高塔之顶。",
+      "你燃起斗志，知道你将要与一名棘手的敌人战斗",
+      "在一条昏暗的街上，你遇见几个戴着兜帽的人在进行某种黑暗的仪式。当你靠近时，他们全都同时转身面对你，让你觉得十分诡异。 其中个子最高的一个微微一笑，露出了长长的尖牙，向你伸出了一只苍白而瘦长的手： NL ~\"加入~ ~我们~ ~武僧。~ ~一起~ ~感受~ ~高塔~ ~的~ ~温暖~ ~吧。\"~"
+    ]
   }
 }
