--- a/localization/zhs/AigisMod-Event-Strings.json
+++ b/localization/zhs/AigisMod-Event-Strings.json
@@ -116,5 +116,24 @@
       "[锁定] 你没有解放牌。",
       "[离开]"
     ]
+  },
+
+
+
+  "aigisMod:AigisMiracle": {
+    "NAME": "埃癸斯的奇迹",
+    "DESCRIPTIONS": [
+      "你听到了女神埃癸斯的声音 NL 她询问你需要什么。",
+      "你感受到了无比巨大的力量，但是不知道你的身体还能支撑多久。",
+      "一名友军被召唤来帮助你",
+      "你感到了精神抖擞"
+    ],
+    "OPTIONS": [
+      "[力量] #g将所有打击变为奇迹打击。 获得埃癸斯像。",
+      "[援助] #g将一张牌加入牌组。",
+      "[体力] #g最大HP #b+8",
+      "[锁定] 你没有打击。",
+      "[离开]"
+    ]
   }
 }
