--- a/localization/zhs/AigisMod-Keyword-Strings.json
+++ b/localization/zhs/AigisMod-Keyword-Strings.json
@@ -387,7 +387,57 @@
 
     ],
     "DESCRIPTION": "当你格挡值为0或有 #y残影 时，触发效果。"
+  },
+
+
+  {
+    "PROPER_NAME": "深海",
+    "NAMES": [
+      "深海",
+      "深海。",
+      "Deep_sea",
+      "deep_sea"
+    ],
+    "DESCRIPTION": "当你抽到此卡时+, 将 #b1 张 #y深海 加入手牌。"
+  },
+  {
+    "PROPER_NAME": "水压",
+    "NAMES": [
+      "水压",
+      "水压。",
+      "Water_pressure",
+      "water_pressure"
+    ],
+    "DESCRIPTION": "在角色回合开始时，失去 #yHP 。 如果到达 #b7 层, 则改为失去所有 #yHP 。"
+  },
+  {
+    "PROPER_NAME": "水兵",
+    "NAMES": [
+      "水兵",
+      "水兵",
+      "Sailor.",
+      "Sailor:"
+    ],
+    "DESCRIPTION": "根据其数值减少你的水压层数并获得额外效果。"
+  },
+  {
+    "PROPER_NAME": "魔物使",
+    "NAMES": [
+      "魔物使",
+      "魔物使。",
+      "Beast_tamer",
+      "beast_tamer"
+    ],
+    "DESCRIPTION": "这张卡拥有 #y虚无 和 #y消耗 。当被消耗时，将 #b1 张 #y魔兽刻耳柏洛斯 加入手牌。"
+  },
+  {
+    "PROPER_NAME": "咒影",
+    "NAMES": [
+      "咒影",
+      "咒影。",
+      "Cursed_shadows",
+      "cursed_shadows"
+    ],
+    "DESCRIPTION": "回合结束时，获得 #y格挡 。 受到来自 #y攻击牌 的 #y伤害 提升。"
   }
-
-
 ]
