--- a/localization/kor/AigisMod-Card-Strings.json
+++ b/localization/kor/AigisMod-Card-Strings.json
@@ -1934,8 +1934,8 @@
   },
   "aigisMod:AirSignal": {
     "NAME": "에어 시그널",
-    "DESCRIPTION": "보존. NL 버린 카드 더미에서 비행대 1 장을 손패로 가져옵니다 (이번 턴에만 0 코스트) NL Negate the next damage coming from yourself. NL소멸.",
-    "UPGRADE_DESCRIPTION": "보존. NL 버린 카드 더미에서 비행대 1 장을 손패로 가져옵니다 (이번 턴에만 0 코스트) NL Negate the next damage coming from yourself. NL 소멸.",
+    "DESCRIPTION": "보존. NL 버린 카드 더미에서 비행대 1 장을 손패로 가져옵니다 (이번 턴에만 0 코스트) NL 다음에 받는 자상 데미지를 무효화. NL 소멸.",
+    "UPGRADE_DESCRIPTION": "보존. NL 버린 카드 더미에서 비행대 1 장을 손패로 가져옵니다 (이번 턴에만 0 코스트) NL 다음에 받는 자상 데미지를 무효화. NL 소멸.",
     "EXTENDED_DESCRIPTION" : [
       ""
     ]
