--- a/localization/zhs/AigisMod-Relic-Strings.json
+++ b/localization/zhs/AigisMod-Relic-Strings.json
@@ -3,35 +3,35 @@
     "NAME": "看板娘的劝诱",
     "FLAVOR": "茱诺：我家的生意还不错吧？毕竟有这么可爱的我在这呢!",
     "DESCRIPTIONS": [
-      "添加 #b1 张已升级的茱诺到牌组中 。在普通和精英战斗中额外获得一张 #y卡牌奖励 ，但只包含有普通卡牌。"
+      "添加 #b1 张已升级的茱诺到牌组中 。在普通和精英战斗中额外获得一张 #y卡牌奖励 ，但只包含普通卡牌。"
     ]
   },
   "aigisMod:HappyWishes": {
     "NAME": "恭贺的微笑",
     "FLAVOR": "罗洁特: 我为了亡国而挥舞着我的剑",
     "DESCRIPTIONS": [
-      "升级你牌组中的 #b1  张 #y罗洁特 或者将 #b1  张已升级的 #y罗洁特 加入牌组。当你将普通卡牌加入卡组时 #y升级  它。"
+      "升级你牌组中的 #b1  张 #y罗洁特 或者将 #b1  张已升级的 #y罗洁特 加入牌组。当你将普通卡牌加入卡组时 #y升级 它。"
     ]
   },
   "aigisMod:Ate": {
     "NAME": "吞食",
     "FLAVOR": "鬼忍姬: 惹恼鬼可是很恐怖的哦，所以不要摸我的头啊！",
     "DESCRIPTIONS": [
-      "当你抽到一张原始耗能为 #b4 的卡牌时获得 [E]  "
+      "当你抽到一张原始耗能为 #b4 的卡牌时获得 [E] 。"
     ]
   },
   "aigisMod:DarkGuild": {
     "NAME": "暗之公会的女仆",
     "FLAVOR": "艾琳：照顾起居、暗杀、间谍，您可以随意吩咐。",
     "DESCRIPTIONS": [
-      "当 #y暗杀 触发时抽 #b1 张卡，获得 #y8 金币 (金币每场战斗只会获得一次)。"
+      "当 #y暗杀 触发时抽 #b1 张卡，获得 #y8 金币 (每场战斗只会获得一次金币)。"
     ]
   },
   "aigisMod:MagicAcceleration": {
     "NAME": "魔导加速之理",
     "FLAVOR": "托娃：这就是时间支配者的力量。",
     "DESCRIPTIONS": [
-      "#y减速 不会移除 #y缓慢 。",
+      " #y减速 不会移除 #y缓慢 。",
       " 当你打出一张 #y魔女 牌时，抽一张牌。"
     ]
   },
@@ -40,22 +40,22 @@
     "FLAVOR": "贝琳达：妈妈太爱管闲事了，我一个人能做到的。",
     "DESCRIPTIONS": [
       "战斗开始时敌人拥有 #b1 #y减速 (临时 #y缓慢 )。",
-      "一回合内使用 #b2  张 #y魔女 牌后，对所有敌人造成 #b3 点伤害。"
+      "一回合内使用 #b2 张 #y魔女 牌后，对所有敌人造成 #b3 点伤害。"
     ]
   },
   "aigisMod:HealingTreasure": {
     "NAME": "治愈的秘宝",
     "FLAVOR": "莉安娜： 虽然我能治愈伤痛，但我更想治愈人心。",
     "DESCRIPTIONS": [
-      "当你回复 #g生命 时随机消耗你 #y手牌 、 #y牌库 或是 #y弃牌堆 中的 #b1 张 #y状态 牌。"
+      "当回复 #g生命 时随机消耗 #y手牌 、 #y抽牌堆 或 #y弃牌堆 中的 #b1 张 #y状态 牌。"
     ]
   },
   "aigisMod:DarknessAura": {
-    "NAME": "超级暗黑波动",
+    "NAME": "暗黑波动",
     "FLAVOR": "暗黑骑士：我早已舍弃这条性命，你当我是弃子用也无妨.....",
     "DESCRIPTIONS": [
       "每场战斗开始时将 #y暗黑骑士 放入手牌。",
-      "如果你在回合中没有打出任何 #b攻击 牌，对所有敌人施加 #b1  层 #y虚弱 并且获得 #b8 点 #y格挡 。"
+      "如果你在回合中没有打出任何 #b攻击 牌，对所有敌人施加 #b1 层 #y虚弱 并获得 #b8 点 #y格挡 。"
     ]
   },
   "aigisMod:AegisTreasure": {
@@ -63,7 +63,7 @@
     "FLAVOR": "安娜：这就是埃癸斯大人曾经使用过的武具。",
     "DESCRIPTIONS": [
       "每场战斗开始时获得 #b1 点 #y敏捷 。将 #b1 张埃癸斯的神器加入卡组。",
-      "当你打出 #y技能  牌时获得 #b1 层 #y反击 。"
+      "当你打出 #y技能 牌时获得 #b1 层 #y反击 。"
     ]
   },
   "aigisMod:GodSlaying": {
@@ -83,7 +83,7 @@
     ]
   },
   "aigisMod:Fortress": {
-    "NAME": "难攻不落的要塞",
+    "NAME": "固若金汤的要塞",
     "FLAVOR": "路易丝: 纵使国家已经不在，但我依然会为了还活着的人民而战。.",
     "DESCRIPTIONS": [
       "在每场战斗开始时获得 #b2 点 #y敏捷 。每回合开始时 #y随机 增加一张卡牌的 #y耗能 #b1 点直到回合结束。"
@@ -137,11 +137,10 @@
     "NAME": "帝国的英雄",
     "FLAVOR": "给予帝国最强之人的称号。",
     "DESCRIPTIONS": [
-      "每赢得 #b5 场战斗添加一个永久效果，最多有 #b4 种效果。",
-      " NL #y1 。 当你打出技能牌时移除你的 #y易伤 。",
+      "#y打击 造成 #y真实伤害 。 NL 每赢得 #b5 场战斗添加一个永久效果，最多有 #b3 种效果。",
+      " NL #y1 。 #y打击 和 #y防御 额外获得 #b2  点伤害/格挡。",
       " NL #y2 。 当你打出攻击牌时移除你的 #y虚弱 。",
-      " NL #y3 。 #y打击 和 #y防御 额外获得 #b2  点伤害/格挡。",
-      " NL #y4 。 #y打击 造成 #y真实伤害 。"
+      " NL #y3 。 当你打出技能牌时移除你的 #y易伤 。"
     ]
   },
 
@@ -149,8 +148,8 @@
     "NAME": "帝国元帅",
     "FLAVOR": "被誉为不败的智囊的白之帝国首席军师",
     "DESCRIPTIONS": [
-      "当你打出 #y蕾欧娜 或是 #y蕾欧拉 时，获得 [E] ",
-      " NL 当你打出 #y防御 时获得 #b3  层反击。"
+      "当你打出 #y蕾欧娜 或 #y蕾欧拉 时，获得 [E] ",
+      " NL 当你打出 #y防御 时获得 #b3 层反击。"
     ]
   },
   "aigisMod:ImperialKnight": {
@@ -180,7 +179,7 @@
     "NAME": "白龙的布阵",
     "FLAVOR": "萨贝因：这和种族与国家无关。因为我们的心都向着同一个未来。",
     "DESCRIPTIONS": [
-      "每场战斗 #y3 次：你在一回合内打出 #y帝国 和 #y恶魔 牌时获得 [E] "
+      "每场战斗 #y3 次：在一回合内同时打出 #y帝国 和 #y恶魔 牌时获得 [E] 。"
     ]
   },
   "aigisMod:ImperialSniper": {
@@ -203,7 +202,7 @@
     "FLAVOR": "德怀特：我的忠诚不会改变，所以我不会脱下这身铠甲。",
     "DESCRIPTIONS": [
       " #y防御 额外获得 #b1 点格挡。",
-      " NL 你每打出 #b8  张 #y帝国 牌，获得 #b4 点格挡。"
+      " NL 你每打出 #b8 张 #y帝国 牌，获得 #b4 点格挡。"
     ]
   },
   "aigisMod:DemonCommand": {
@@ -221,7 +220,7 @@
       " #y打击 和 #y防御 的消耗变为 #b0 。"
     ]
   },
-  "aigisMod:AerialFight": {
+  "aigisMod:AerialFight00": {
     "NAME": "空域战斗",
     "FLAVOR": "凯特丽姬：比天更高，比风更快！在天空飞行的我帅呆了！",
     "DESCRIPTIONS": [
@@ -240,6 +239,14 @@
     "FLAVOR": "白之皇帝： 不，生活在帝国就意味着不断地取胜。",
     "DESCRIPTIONS": [
       "在与 #y精英 和 #yBoss 战斗时，获得 #b3 点 #y力量 和 #b3 点 #y敏捷 。"
+    ]
+  },
+  "aigisMod:DemonicRelease": {
+    "NAME": "魔之解放",
+    "FLAVOR": "莉莉: 谢谢你解放了真正的我。",
+    "DESCRIPTIONS": [
+      "每回合第一张 #y打击 的伤害翻倍。",
+      "每回合一次: 当你打出 #y打击 或 #y防御 时，可以选择 #y消耗 抽牌堆中 #b1 张 #y恶魔牌 。"
     ]
   },
   "aigisMod:CallHelp": {
@@ -451,6 +458,95 @@
 
 
 
+  "aigisMod:Endurance": {
+    "NAME": "坚韧不拔",
+    "FLAVOR": "丹：我的存在意义就是超越极限！",
+    "DESCRIPTIONS": [
+      "打出战斗中生成的牌时，获得 #b2 点 #y临时生命 。",
+      "每回合最多触发 #b5 次。"
+    ]
+  },
+  "aigisMod:Miracle": {
+    "NAME": "奇迹之男",
+    "FLAVOR": "女神埃癸斯：不要放弃，人类。现在，我女神埃癸斯，将赐予你我的力量。",
+    "DESCRIPTIONS": [
+      "打出战斗中生成的牌时，获得 #b3 点 #y临时生命 。",
+      "每回合最多触发 #b5 次。"
+    ]
+  },
+  "aigisMod:DepthTorpedo": {
+    "NAME": "深海鱼雷",
+    "FLAVOR": "维贝尔：要是能潜入人们的心里，解决问题就方便多了。",
+    "DESCRIPTIONS": [
+      "在 #y水压 状态下首次失去生命时，所有敌人失去 #b2 点 #y力量 。"
+    ]
+  },
+  "aigisMod:SharkTide": {
+    "NAME": "鲨鱼潮汐",
+    "FLAVOR": "芬恩：我来自水下城市，我会尽我所能学习旱地的文化！",
+    "DESCRIPTIONS": [
+      "当你有 #b2 层或以上 #y水压 状态时，每回合开始时获得 [E] 。"
+    ]
+  },
+  "aigisMod:AerialFight": {
+    "NAME": "暴走飞跃",
+    "FLAVOR": "克雷尔：我是克雷尔，警备部飞行队长。请问，我可以走了吗？",
+    "DESCRIPTIONS": [
+      "每当抽到 #y空域信标 时抽 #b1 张牌。每回合最多触发 #y2 次，且仅在 #y抽牌堆 有牌时生效。"
+    ]
+  },
+  "aigisMod:CaitSith": {
+    "NAME": "凯西猫",
+    "FLAVOR": "法尔内：我正在看书...别打扰我。",
+    "DESCRIPTIONS": [
+      "每在战斗中 #y生成 #b10 #y张牌 ，将 #b1 张 #y凯西猫 加入手牌。"
+    ]
+  },
+  "aigisMod:PumpUp": {
+    "NAME": "鼓气拳套",
+    "FLAVOR": "吉娜：男人都是很单纯的，对吧？",
+    "DESCRIPTIONS": [
+      "每场战斗第 #b3 回合开始时，获得 #b3 层 #y活力 ， #b3 点 #y临时生命 ，并 #y回复 #b3 点 #y生命 。"
+    ]
+  },
+  "aigisMod:AutoHeal": {
+    "NAME": "自愈利爪",
+    "FLAVOR": "乌鲁：有了这幅爪子，连恶魔都不是我的对手！",
+    "DESCRIPTIONS": [
+      "回合开始时，对 #y所有敌人 造成 #b1 点伤害。",
+      "回合结束时，获得 #b1 点 #y临时生命 。"
+    ]
+  },
+  "aigisMod:PearlGrace": {
+    "NAME": "珍珠雅饰",
+    "FLAVOR": "利特瓦：深海中有很多强大的战士，我要向他们学习...!",
+    "DESCRIPTIONS": [
+      "战斗开始时，对 #y所有敌人 施加 #b1 层 #y深海 。",
+      "每当打出 #y深海 牌，对 #y随机敌人 造成 #y3 点伤害。"
+    ]
+  },
+  "aigisMod:FiringCommand": {
+    "NAME": "开火指令",
+    "FLAVOR": "琳贝露：只要有我在，就能化险为夷。",
+    "DESCRIPTIONS": [
+      " #y水手牌 可以无视 #y水压 需求触发效果。"
+    ]
+  },
+  "aigisMod:VitalityMedicine": {
+    "NAME": "生命秘药",
+    "FLAVOR": "尼科尔：先把这里改造成工坊吧。助手，可以帮我拿下行李吗？",
+    "DESCRIPTIONS": [
+      "每场战斗的前 #b2 个回合，在自身回合 #y免疫所有伤害 。",
+      "获得 #y1 个 #y药水栏位 。"
+    ]
+  },
+  "aigisMod:AigisStatue": {
+    "NAME": "埃癸斯雕像",
+    "FLAVOR": "安娜：你可以吸取她的召唤之力。",
+    "DESCRIPTIONS": [
+      "战斗开始时，将相应数量的 #y埃癸斯雕像 加入抽牌堆。每场战斗结束时数量加 #b2 。"
+    ]
+  },
 
 
 
@@ -458,28 +554,36 @@
     "NAME": "埃癸斯神殿",
     "FLAVOR": "人们为了他们的英雄建造了一座巨大而又隐蔽的神殿，一座用来供奉女神埃癸斯的神殿。",
     "DESCRIPTIONS": [
-      "普通和精英战斗后收到含有其他 #yAigis 角色 #b3 张卡牌的额外 #y卡牌奖励 。"
+      "普通和精英战斗后额外获得一组其他 #yAigis 角色 #b3 张卡牌的额外 #y卡牌奖励 。"
     ]
   },
   "aigisMod:AigisShrineEmperor": {
     "NAME": "埃癸斯神殿",
     "FLAVOR": "人们为了他们的英雄建造了一座巨大而又隐蔽的神殿，一座用来供奉女神埃癸斯的神殿。",
     "DESCRIPTIONS": [
-      "普通和精英战斗后收到含有其他 #yAigis 角色 #b3 张卡牌的额外 #y卡牌奖励 。"
+      "普通和精英战斗后额外获得一组含有其他 #yAigis 角色 #b3 张卡牌的额外 #y卡牌奖励 。"
     ]
   },
   "aigisMod:AigisShrineAvenger": {
     "NAME": "埃癸斯神殿",
     "FLAVOR": "人们为了他们的英雄建造了一座巨大而又隐蔽的神殿，一座用来供奉女神埃癸斯的神殿。",
     "DESCRIPTIONS": [
-      "普通和精英战斗后收到含有其他 #yAigis 角色 #b3 张卡牌的额外 #y卡牌奖励 。."
+      "普通和精英战斗后额外获得一组含有其他 #yAigis 角色 #b3 张卡牌的额外 #y卡牌奖励 。."
     ]
   },
   "aigisMod:AigisShrineKnight": {
     "NAME": "埃癸斯神殿",
     "FLAVOR": "人们为了他们的英雄建造了一座巨大而又隐蔽的神殿，一座用来供奉女神埃癸斯的神殿。",
     "DESCRIPTIONS": [
-      "普通和精英战斗后收到含有其他 #yAigis 角色 #b3 张卡牌的额外 #y卡牌奖励 。"
+      "普通和精英战斗后额外获得一组含有其他 #yAigis 角色 #b3 张卡牌的额外 #y卡牌奖励 。"
+    ]
+  },
+
+  "aigisMod:AigisShrineMiracle": {
+    "NAME": "埃癸斯神殿",
+    "FLAVOR": "人们为了他们的英雄建造了一座巨大而又隐蔽的神殿，一座用来供奉女神埃癸斯的神殿。",
+    "DESCRIPTIONS": [
+      "普通和精英战斗后额外获得一组含有其他 #yAigis 角色 #b3 张卡牌的额外 #y卡牌奖励 。"
     ]
   }
 }
