--- a/localization/zhs/AigisMod-UI-Strings.json
+++ b/localization/zhs/AigisMod-UI-Strings.json
@@ -3,7 +3,7 @@
     "TEXT": [
       "魔女", "当敌人受到该牌攻击，获得临时 #y缓慢 .",
       "弓箭手", "此卡 #b无视 敌人的各种受到 #y攻击 是发动能力，比如荆棘。",
-      "公主", "当你将 #y公主 牌加入卡组时，获得 #b1 点 #y最大生命 。",
+      "公主", "当你将 #y公主 牌加入卡组时，获得 #b2 点 #y最大生命 。",
       "不死", "此类型卡牌被 #y消耗 时，获得 #b额外 效果 。",
       "黑色稀有度", "此类型卡牌在 #y升级 时会有 #y分支 路线。只有稀有牌会有此特性。",
       "东国", " 此卡可以响应其他 #y东国 牌的效果",
@@ -127,10 +127,30 @@
     ]
   },
 
+  "SanmotoAction": {
+    "TEXT": [
+      "打出。"
+    ]
+  },
+
   "AirshipAction": {
     "TEXT": [
       "选择一张帝国牌加入到你的手牌中。",
       "我的牌组中没有帝国牌..."
+    ]
+  },
+
+  "RuteKnightAction": {
+    "TEXT": [
+      "选择一张帝国骑士牌加入到你的手牌中。",
+      "我的牌组中没有帝国骑士牌..."
+    ]
+  },
+
+  "RuteStrikeAction": {
+    "TEXT": [
+      "选择一张打击加入你的手牌。",
+      "我的弃牌堆中没有打击..."
     ]
   },
 
@@ -200,7 +220,11 @@
       " 易伤 。",
       " 中毒 。",
       " NL 施加 ", " 易伤 。",
-      " NL 施加 ", " 中毒 。"
+      " NL 施加 ", " 中毒 。",
+      " 减速 。",
+      " NL 施加 ", " 减速 。",
+      " 能量 。",
+      " NL 获得 ", " 能量 。"
     ]
   },
   "BelpheAction": {
@@ -315,6 +339,88 @@
       "选择一张牌加入到你的手牌中。",
       "选择牌加入到你的手牌中",
       "我的抽牌堆中没有解放牌..."
+    ]
+  },
+
+  "ShinatoAction": {
+    "TEXT": [
+      "选择一张牌洗回抽牌堆"
+    ]
+  },
+  "ShukaAction": {
+    "TEXT": [
+      "你可以选择至多 ", " 张东国牌。"
+    ]
+  },
+
+  "PheasantAction": {
+    "TEXT": [
+      "回到抽牌堆底部。"
+    ]
+  },
+
+  "PotalAction": {
+    "TEXT": [
+      "选择最多 ", " 张牌放入弃牌堆。",
+      "选择1张空域牌放入弃牌堆。",
+      "我的抽牌堆没有空域牌..."
+    ]
+  },
+
+  "PuniruAction": {
+    "TEXT": [
+      "选择1张牌加入手牌。"
+    ]
+  },
+
+  "AmelieAction": {
+    "TEXT": [
+      "选择1张水手攻击牌加入手牌。",
+      "我的抽牌堆没有水手攻击牌..."
+    ]
+  },
+
+  "RenataAction": {
+    "TEXT": [
+      "选择最多 ", " 张牌放入弃牌堆。"
+    ]
+  },
+
+  "ThrudAction": {
+    "TEXT": [
+      "选择1张空域牌放入弃牌堆。"
+    ]
+  },
+
+  "JacquelineAction": {
+    "TEXT": [
+      "选择1张水手或深海牌加入手牌",
+      "我的弃牌堆没有水手或深海牌..."
+    ]
+  },
+
+  "NoelAction": {
+    "TEXT": [
+      "选择要复制的牌。"
+    ]
+  },
+
+  "ShirleyAction": {
+    "TEXT": [
+      "选择1张精灵使、元素使、召唤师或召唤物从抽牌堆或弃牌堆加入手牌。",
+      "选择最多2张精灵使、元素使、召唤师或召唤物从抽牌堆或弃牌堆加入手牌。"
+    ]
+  },
+
+  "RefletAction": {
+    "TEXT": [
+      "选择1张光元素从抽牌堆或弃牌堆加入手牌。"
+    ]
+  },
+
+  "LatourAction": {
+    "TEXT": [
+      "选择要保留的牌。"
     ]
   }
 }
