--- a/localization/zhs/AigisMod-Event-Strings.json
+++ b/localization/zhs/AigisMod-Event-Strings.json
@@ -131,7 +131,7 @@
     "OPTIONS": [
       "[力量] #g将所有打击变为奇迹打击。 获得埃癸斯像。",
       "[援助] #g将一张牌加入牌组。",
-      "[体力] #g最大HP #b+8",
+      "[体力] #g最大HP #b+8 #g。",
       "[锁定] 你没有打击。",
       "[离开]"
     ]
