--- a/localization/zhs/AigisMod-Keyword-Strings.json
+++ b/localization/zhs/AigisMod-Keyword-Strings.json
@@ -254,10 +254,10 @@
 
   {
     "NAMES": [
-      "不死",
-      "不死",
-      "不死:",
-      "不死:",
+      "不死族",
+      "不死族",
+      "不死族:",
+      "不死族:",
       "Undead",
       "undead",
       "Undead:",
