--- a/localization/zhs/AigisMod-Relic-Strings.json
+++ b/localization/zhs/AigisMod-Relic-Strings.json
@@ -492,7 +492,7 @@
     "NAME": "猛冲·起飞",
     "FLAVOR": "克莱尔：我是警备部队飞行队长克莱尔。呃，我可以走了吗？",
     "DESCRIPTIONS": [
-      "当你抽到一张 #y空中标记 时 抽 #b1 张牌。 你的 #y抽牌堆 有牌时可以触发，每回合最多可以触发e #y2 次。"
+      "当你抽到一张 #y空中标记 时 抽 #b1 张牌。 你的 #y抽牌堆 有牌时可以触发，每回合最多可以触发 #y2 次。"
     ]
   },
   "aigisMod:CaitSith": {
@@ -506,7 +506,7 @@
     "NAME": "肌肉活化",
     "FLAVOR": "吉娜：男人真是有够单纯欸~?",
     "DESCRIPTIONS": [
-      "在你的第 #b3 回合开始时，获得 #b3 层 #y活力 ， #b3 点 #y临时生命 并且 #y回复 #b3 点 #yHP 。"
+      "在你的第 #b3 回合开始时，获得 #b3 层 #y活力 ， #b3 点 #y临时生命 并且 #y回复 #b3 点 生命 。"
     ]
   },
   "aigisMod:AutoHeal": {
@@ -519,7 +519,7 @@
   },
   "aigisMod:PearlGrace": {
     "NAME": "珍珠的光辉",
-    "FLAVOR": "利托瓦： 深海的战士中强者很多，我也要像他们学习...!",
+    "FLAVOR": "利托瓦：深海的战士中强者很多，我也要像他们学习...!",
     "DESCRIPTIONS": [
       "每场战斗开始时，对所有 #y敌人 施加 #b1 层 #y水压 。",
       "无论何时你打出 #y深海 牌时，对一名 #y随机敌人 造成 #y3 点 #y伤害 。"
@@ -534,7 +534,7 @@
   },
   "aigisMod:VitalityMedicine": {
     "NAME": "停滞的迷药",
-    "FLAVOR": "妮柯尔： 先把这里改造成工房吧。助手，能帮我把行李拿过来吗？",
+    "FLAVOR": "妮柯尔：先把这里改造成工房吧。助手，能帮我把行李拿过来吗？",
     "DESCRIPTIONS": [
       "每场战斗的前 #b2 回合，#y免疫 任何来自自身的 #y伤害 。",
       "获得 #b1 个 #y药水栏位 。"
