--- a/localization/zhs/AigisMod-UI-Strings.json
+++ b/localization/zhs/AigisMod-UI-Strings.json
@@ -408,7 +408,7 @@
   "ShirleyAction": {
     "TEXT": [
       "从抽牌堆或弃牌堆选择一张灵使、元素、召唤士、召唤兽牌加入到手牌中。",
-      "从抽牌堆或弃牌堆选择一张灵使、元素、召唤士、召唤兽牌加入到手牌中。"
+      "选择最多2张精灵使、元素使、召唤师或召唤物从抽牌堆或弃牌堆加入手牌。"
     ]
   },
 
