--- a/localization/kor/AigisMod-Card-Strings.json
+++ b/localization/kor/AigisMod-Card-Strings.json
@@ -251,20 +251,20 @@
   },
   "aigisMod:MorfessaPlatinum": {
     "NAME": "모르페사",
-    "DESCRIPTION": "Apply !aigisMod:SecondMagic! aigismod:Cursed_shadows. NL aigismod:Cursed: Enemy loses !M! HP for each of its powers.",
+    "DESCRIPTION": "!aigisMod:SecondMagic! aigismod:저주의 그림자를 부여합니다. NL aigismod:저주: 적은 스스로의 힘 수치 x !M! 만큼의 HP를 잃습니다.",
     "EXTENDED_DESCRIPTION" : [
       "재화를 이끄는 자"
     ]
   },
   "aigisMod:MorfessaBlack": {
     "NAME": "모르페사",
-    "DESCRIPTION": "Apply !aigisMod:SecondMagic! aigismod:Cursed_shadows. NL aigismod:Cursed: Enemy loses !M! HP for each of its powers.",
+    "DESCRIPTION": "!aigisMod:SecondMagic! aigismod:저주의 그림자를 부여합니다. NL aigismod:저주: 적은 스스로의 힘 수치 x !M! 만큼의 HP를 잃습니다.",
     "EXTENDED_DESCRIPTION" : [
       "재화를 이끄는 자"
     ]
   },
   "aigisMod:CursedFog": {
-    "NAME": "Fog of Falias",
+    "NAME": "팔리아스의 안개",
     "DESCRIPTION": "소멸. NL 만일 이 카드가 턴 종료시 패에 남아 있다면, 최대 HP가 1 감소합니다."
   },
   "aigisMod:MildrithPlatinum": {
