--- a/localization/kor/AigisMod-Card-Strings.json
+++ b/localization/kor/AigisMod-Card-Strings.json
@@ -4241,99 +4241,99 @@
 
 
   "aigisMod:StrikeRush": {
-    "NAME": "Strike",
+    "NAME": "타격",
     "DESCRIPTION": "!D! 데미지를 가합니다. NL 버린 카드 더미에 타격을 1 장 추가합니다. NL 소멸.",
     "UPGRADE_DESCRIPTION": "!D! 데미지를 가합니다. NL 버린 카드 더미에 타격+를 1 장 추가합니다. NL 소멸."
   },
   "aigisMod:StrikeRush2": {
-    "NAME": "Strike",
-    "DESCRIPTION": "!D! 데미지를 가합니다. NL Add 1 Strike to discard pile. NL 소멸.",
-    "UPGRADE_DESCRIPTION": "!D! 데미지를 가합니다. NL Add 1 Strike+ to discard pile. NL 소멸."
+    "NAME": "타격",
+    "DESCRIPTION": "!D! 데미지를 가합니다. NL 버린 카드 더미에 타격을 1 장 추가합니다. NL 소멸.",
+    "UPGRADE_DESCRIPTION": "!D! 데미지를 가합니다. NL 버린 카드 더미에 타격+를 1 장 추가합니다. NL 소멸."
   },
   "aigisMod:MiracleStrike": {
-    "NAME": "Miracle Strike",
-    "DESCRIPTION": "!D! 데미지를 가합니다. NL Add 1 Strike to discard pile. NL 소멸",
-    "UPGRADE_DESCRIPTION": "!D! 데미지를 가합니다. NL Add 1 Strike+ to discard pile. NL 소멸"
+    "NAME": "기적의 타격",
+    "DESCRIPTION": "!D! 데미지를 가합니다. NL 버린 카드 더미에 타격을 1 장 추가합니다. NL 소멸",
+    "UPGRADE_DESCRIPTION": "!D! 데미지를 가합니다. NL 버린 카드 더미에 타격+를 1 장 추가합니다. NL 소멸"
   },
   "aigisMod:DefendRush": {
-    "NAME": "Defend",
+    "NAME": "방어",
     "DESCRIPTION": "방어도를 !B! 얻습니다."
   },
   "aigisMod:SacredShrine": {
-    "NAME": "Sacred Shrine",
-    "DESCRIPTION": "Add 1 random Reinforcement character to hand.",
-    "UPGRADE_DESCRIPTION": "Add 1 random Reinforcement character to hand."
+    "NAME": "성스러운 신전",
+    "DESCRIPTION": "무작위의 지원 캐릭터 카드 1 장을 손패에 넣습니다.",
+    "UPGRADE_DESCRIPTION": "무작위의 지원 캐릭터 카드 1 장을 손패에 넣습니다."
   },
   "aigisMod:DesertSoldier": {
-    "NAME": "Desert Soldier",
-    "DESCRIPTION": "Deal !D! damage. NL Gain !B! 방어도. NL 소멸",
-    "UPGRADE_DESCRIPTION": "Deal !D! damage. NL Gain !B! 방어도. NL 소멸",
+    "NAME": "사막 전사",
+    "DESCRIPTION": "!D! 데미지를 가합니다. NL !B! 방어도를 얻습니다. NL 소멸",
+    "UPGRADE_DESCRIPTION": "!D! 데미지를 가합니다. NL !B! 방어도를 얻습니다. NL 소멸",
     "EXTENDED_DESCRIPTION": [
-      "Reinforcements"
+      "지원군"
     ]
   },
   "aigisMod:Genin": {
-    "NAME": "Genin Ninja",
+    "NAME": "닌자",
     "DESCRIPTION": "손패에 수리검 1 장을 얻습니다. NL 소멸.",
     "UPGRADE_DESCRIPTION": "손패에 1 수리검+ 얻습니다. NL 소멸.",
     "EXTENDED_DESCRIPTION": [
-      "Reinforcements"
+      "지원군"
     ]
   },
   "aigisMod:SoldierA": {
-    "NAME": "Soldier",
-    "DESCRIPTION": "Deal !D! damage. NL 소멸.",
-    "UPGRADE_DESCRIPTION": "Deal !D! damage. NL 소멸.",
+    "NAME": "솔져",
+    "DESCRIPTION": "!D! 데미지를 가합니다. NL 소멸.",
+    "UPGRADE_DESCRIPTION": "!D! 데미지를 가합니다. NL 소멸.",
     "EXTENDED_DESCRIPTION": [
-      "Reinforcements"
+      "지원군"
     ]
   },
   "aigisMod:HeavySoldierA": {
-    "NAME": "Heavy Soldier",
-    "DESCRIPTION": "Gain !B! 방어도. NL 소멸.",
-    "UPGRADE_DESCRIPTION": "Gain !B! 방어도. NL 소멸.",
+    "NAME": "헤비 아머",
+    "DESCRIPTION": "!B! 방어도를 얻습니다. NL 소멸.",
+    "UPGRADE_DESCRIPTION": "!B! 방어도를 얻습니다. NL 소멸.",
     "EXTENDED_DESCRIPTION": [
-      "Reinforcements"
+      "지원군"
     ]
   },
   "aigisMod:BowSoldierA": {
-    "NAME": "Bow Soldier",
-    "DESCRIPTION": "Deal !D! aigismod:아쳐 데미지. NL 소멸.",
-    "UPGRADE_DESCRIPTION": "Deal !D! aigismod:아쳐 데미지. NL 소멸.",
+    "NAME": "아쳐",
+    "DESCRIPTION": "!D! aigismod:아쳐 데미지를 가합니다. NL 소멸.",
+    "UPGRADE_DESCRIPTION": "!D! aigismod:아쳐 데미지를 가합니다. NL 소멸.",
     "EXTENDED_DESCRIPTION": [
-      "Reinforcements"
+      "지원군"
     ]
   },
   "aigisMod:MagicSoldierA": {
-    "NAME": "Magic Soldier",
-    "DESCRIPTION": "Deal !D! aigismod:스플래시 데미지. NL 소멸.",
-    "UPGRADE_DESCRIPTION": "Deal !D! aigismod:스플래시 데미지. NL 소멸.",
+    "NAME": "메이지",
+    "DESCRIPTION": "!D! aigismod:스플래시 데미지를 가합니다. NL 소멸.",
+    "UPGRADE_DESCRIPTION": "!D! aigismod:스플래시 데미지를 가합니다. NL 소멸.",
     "EXTENDED_DESCRIPTION": [
-      "Reinforcements"
+      "지원군"
     ]
   },
   "aigisMod:Hashim": {
-    "NAME": "Hashim",
-    "DESCRIPTION": "Deal !D! damage. Gain !B! 방어도. NL 소멸.",
-    "UPGRADE_DESCRIPTION": "Deal !D! damage. Gain !B! 방어도. NL 소멸.",
+    "NAME": "하심",
+    "DESCRIPTION": "!D! 데미지를 가합니다. !B! 방어도를 얻습니다. NL 소멸.",
+    "UPGRADE_DESCRIPTION": "!D! 데미지를 가합니다. !B! 방어도를 얻습니다. NL 소멸.",
     "EXTENDED_DESCRIPTION": [
-      "Dextrous Soldier"
+      "능숙한 전사"
     ]
   },
   "aigisMod:Russell": {
-    "NAME": "Russell",
-    "DESCRIPTION": "보존 NL Gain !B! 방어도. NL 소멸.",
-    "UPGRADE_DESCRIPTION": "보존 NL Gain !B! 방어도. NL 소멸.",
+    "NAME": "라셀",
+    "DESCRIPTION": "보존 NL !B! 방어도를 얻습니다. NL 소멸.",
+    "UPGRADE_DESCRIPTION": "보존 NL !B! 방어도를 얻습니다. NL 소멸.",
     "EXTENDED_DESCRIPTION": [
-      "Royal Heavy Infantry"
+      "왕국 중보병"
     ]
   },
   "aigisMod:SeaSoldier": {
-    "NAME": "Deep Sea Soldier",
-    "DESCRIPTION": "Deal !D! damage. NL Apply 1 !M! aigismod:수압. Gain !M! Temporal HP. NL 소멸.",
-    "UPGRADE_DESCRIPTION": "Deal !D! damage. NL Apply 1 !M! aigismod:수압. Gain !M! Temporal HP. NL 소멸.",
+    "NAME": "심해 전사",
+    "DESCRIPTION": "!D! 데미지를 가합니다. NL 1 !M! aigismod:수압을 부여합니다. 임시 HP를 !M! 얻습니다. NL 소멸.",
+    "UPGRADE_DESCRIPTION": "!D! 데미지를 가합니다. NL 1 !M! aigismod:수압을 부여합니다. 임시 HP를 !M! 얻습니다. NL 소멸.",
     "EXTENDED_DESCRIPTION": [
-      "Reinforcements"
+      "지원군"
     ]
   },
   "aigisMod:BirdmanArcher": {
