--- a/localization/kor/AigisMod-Card-Strings.json
+++ b/localization/kor/AigisMod-Card-Strings.json
@@ -251,14 +251,14 @@
   },
   "aigisMod:MorfessaPlatinum": {
     "NAME": "모르페사",
-    "DESCRIPTION": "!aigisMod:SecondMagic! aigismod:저주의 그림자를 부여합니다. NL aigismod:저주: 적은 스스로의 힘 수치 x !M! 만큼의 HP를 잃습니다.",
+    "DESCRIPTION": "!aigisMod:SecondMagic! aigismod:저주의 그림자를 부여합니다. NL aigismod:저주 : 적은 스스로의 힘 수치 x !M! 만큼의 HP를 잃습니다.",
     "EXTENDED_DESCRIPTION" : [
       "재화를 이끄는 자"
     ]
   },
   "aigisMod:MorfessaBlack": {
     "NAME": "모르페사",
-    "DESCRIPTION": "!aigisMod:SecondMagic! aigismod:저주의 그림자를 부여합니다. NL aigismod:저주: 적은 스스로의 힘 수치 x !M! 만큼의 HP를 잃습니다.",
+    "DESCRIPTION": "!aigisMod:SecondMagic! aigismod:저주의 그림자를 부여합니다. NL aigismod:저주 : 적은 스스로의 힘 수치 x !M! 만큼의 HP를 잃습니다.",
     "EXTENDED_DESCRIPTION" : [
       "재화를 이끄는 자"
     ]
@@ -1934,8 +1934,8 @@
   },
   "aigisMod:AirSignal": {
     "NAME": "에어 시그널",
-    "DESCRIPTION": "보존. NL 버린 카드 더미에서 비행대 1 장을 손패로 가져옵니다 (이번 턴에만 0 코스트) NL 다음에 받는 자상 데미지를 무효화. NL 소멸.",
-    "UPGRADE_DESCRIPTION": "보존. NL 버린 카드 더미에서 비행대 1 장을 손패로 가져옵니다 (이번 턴에만 0 코스트) NL 다음에 받는 자상 데미지를 무효화. NL 소멸.",
+    "DESCRIPTION": "보존. NL 버린 카드 더미에서 비행대 1 장을 손패로 가져옵니다 (이번 턴에만 0 코스트) NL 다음에 본인으로부터 받는 데미지를 무효화. NL 소멸.",
+    "UPGRADE_DESCRIPTION": "보존. NL 버린 카드 더미에서 비행대 1 장을 손패로 가져옵니다 (이번 턴에만 0 코스트) NL 다음에 본인으로부터 받는 데미지를 무효화. NL 소멸.",
     "EXTENDED_DESCRIPTION" : [
       ""
     ]
@@ -4330,8 +4330,8 @@
   },
   "aigisMod:SeaSoldier": {
     "NAME": "심해 전사",
-    "DESCRIPTION": "!D! 데미지를 가합니다. NL 1 !M! aigismod:수압을 부여합니다. 임시 HP를 !M! 얻습니다. NL 소멸.",
-    "UPGRADE_DESCRIPTION": "!D! 데미지를 가합니다. NL 1 !M! aigismod:수압을 부여합니다. 임시 HP를 !M! 얻습니다. NL 소멸.",
+    "DESCRIPTION": "!D! 데미지를 가합니다. NL 1 !M! aigismod:수압을 부여합니다. 임시체력을 !M! 얻습니다. NL 소멸.",
+    "UPGRADE_DESCRIPTION": "!D! 데미지를 가합니다. NL 1 !M! aigismod:수압을 부여합니다. 임시체력을 !M! 얻습니다. NL 소멸.",
     "EXTENDED_DESCRIPTION": [
       "지원군"
     ]
